--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <p>Para poder trabajar en el repositorio duplicado, necesitaremos clonar la Fork a nuestro sistema local.
             </p>
             <code>
-                $ <span style="color: rgb(192, 108, 162)">git</span> clone <span style="font-style: italic;">https://github.com/nachomtt/test_nacho.git</span>
+                $ <span style="color: rgb(192, 108, 162)">git</span> clone <span style="font-style: italic; display: inline;">https://github.com/nachomtt/test_nacho.git</span>
             </code>
             <p>Clonar el repositorio, traerá una carpeta con el nombre del repositorio, y los archivos. Necesitamos
                 acceder a la carpeta.</p>
